# ApsimX

./: .RData  .Rhistory  .editorconfig  .gitattributes  .gitignore  .ruleset  APSIM.bib  ApsimX.Core.sln  ApsimX.sln  ApsimXNG.sln  CITATION.cff  CONTRIBUTING.md  Dockerfile.build  ISSUES.md  Jenkins tester.txt  LICENSE.md  ModelsAndNGSolution.slnf  NuGet.config  PULL_REQUESTS.md  Packages.dgml  README.md  RunTestsLocal.bat  This should be in master!!.txt  UpgradeLog.htm  _config.yml  copy_validation_files_to_bind_mount.sh  dockerfile  edgeCases.txt  entrypoint.sh  errors.txt  global - Copy.json  global.json  index.md  jenkinsfile  models_r_dockerfile  plant2.debug  problem.txt  readme.md  test.bat  testEnvironments.json  (+2 more)
.github/: copilot-instructions.md  prt_exfil.sh  publish.yml  stale.yml
.jenkins/: jenkins-main  jenkinsfile
APSIM.Cli/: APSIM.Cli.csproj  Program.cs
APSIM.Client/: .gitignore  APSIM.Client.csproj  ApsimClient.cs  Makefile  Program.cs  README.md  example  unittests
APSIM.Core/: APSIM.Core.csproj  IFunction.cs  INodeModel.cs  IPOCOModel.cs  IStructure.cs  IStructureDependency.cs  ModelDiscovery.cs  ModelRegistry.cs  ModelTypes.cs  Node.cs  NodeTree.cs  README.md  Resource.cs  ScriptCompiler.cs
APSIM.Documentation/: APSIM.Documentation.csproj  DocumentationSettings.cs  DocumentationUtilities.cs  Program.cs  TestUtilities.cs  WebDocs.cs  index.css
APSIM.IO/: APSIM.IO.csproj
Tests/Simulation/ZMQ-Sync/simulation/: pyproject.toml
Tests/Simulation/ZMQ-Sync/simulation/src/oasis/: apsim.py  cli.py  config.py  metompkin.py  plots.py  simulation.py
(+10279 files in other folders)
